fix language div spacing and padding

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -169,6 +169,7 @@
  */
 .page-content {
     padding: $spacing-unit 0;
+    padding-top: 0px;
     flex: 1;
 }
 
